--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <h3>1.2.2 Creating Paragraphs (L3)</h3>
     <p>My First Paragraph</p>  
+    <p>My First Paragraph</p>  
 
     <h2>1.3 Creating Paragraphs (L2)</h2>
     <p>My First Paragraph</p>  
